; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl_core.c_gl_core_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_gl_core.c_gl_core_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @gl_core_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_core_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %16

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @gl_core_context_bind_hw_render(i32* %10, i32 0)
  %12 = call i32 (...) @font_driver_free_osd()
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @gl_core_destroy_resources(i32* %13)
  %15 = call i32 (...) @video_context_driver_free()
  br label %16

16:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @gl_core_context_bind_hw_render(i32*, i32) #1

declare dso_local i32 @font_driver_free_osd(...) #1

declare dso_local i32 @gl_core_destroy_resources(i32*) #1

declare dso_local i32 @video_context_driver_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
